operators/kubevirt/cdi-uploadproxy-nodeport.yaml
# cdi-uploadproxy-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdi-uploadproxy-nodeport
  namespace: cdi
spec:
  type: NodePort
  selector:
    cdi.kubevirt.io: uploadproxy   # <- same selector as the original service
  ports:
    - name: https
      port: 443
      targetPort: 443              # (if unsure, run: kubectl -n cdi get svc cdi-uploadproxy -o yaml | grep -i targetPort)
      nodePort: 32443              # choose any free port in 30000-32767
      protocol: TCP
